react/gatsby-docker/deploy/k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gatsby-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: gatsby-app
  template:
    metadata:
      labels:
        component: gatsby-app
      containers:
        - name: app
          image: agung96tm/gatsby-app
          ports:
            - containerPort: 3000
