react/gatsby-docker/deploy/k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-service
spec:
  type: ClusterIP
  selector:
    component: react-app
  ports:
    - port: 3000
      targetPort: 3000
